--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
   },
   "bugs": "https://github.com/arnog/mathlive/issues/",
   "scripts": {
-    "build": "bash ./scripts/build.sh",
+    "build": "echo 'build'",
+    "_build": "bash ./scripts/build.sh",
     "clean": "bash ./scripts/clean.sh",
     "dist": "bash ./scripts/build.sh production; bash ./scripts/test.sh",
     "lint": "eslint --fix src/; prettier -w src/",
-    "prepare": "bash ./scripts/build.sh production",
+    "prepare": "echo 'prepare'",
+    "_prepare": "bash ./scripts/build.sh production",
     "start": "bash ./scripts/start.sh",
     "test": "bash ./scripts/test.sh",
     "version": "bash ./scripts/version.sh",
